--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@fullcalendar/react": "^5.10.1",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
+    "@mui/styles": "^5.2.3",
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
