--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.2.1",
     "@mui/lab": "^5.0.0-alpha.59",
     "@mui/material": "^5.2.3",
+    "@mui/x-data-grid": "^5.2.1",
     "axios": "^0.24.0",
     "date-fns": "^2.27.0",
     "react": "^17.0.2",
